--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+youtube-transcript-api = "^0.6.1"
+openai = "^1.3.8"
+python-dotenv = "^1.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+requests-mock = "^1.11.0"
+black = "^23.12.0"
 
 [build-system]
 requires = ["poetry-core"]
